tests/indeterminate_module_type/cjs_after_es.js
// @flow
export default 0;
module.exports = 0; // error
(0: string); // error
